# funding_rate

./: .env.example  Cargo.toml  README.md  docker-compose.yml  universe.json
app/: Cargo.toml
app/src/: account.rs  fetch_fee.rs  fetch_margin.rs  fetch_price.rs  fetch_token.rs  main.rs  order.rs  select.rs  sync_trades.rs
common/: Cargo.toml
common/src/: account.rs  constant.rs  event.rs  lib.rs  logger.rs  order.rs  orderbook.rs  price.rs
connector/: Cargo.toml
connector/src/: binanceFeed.rs  lib.rs  rest.rs  types.rs  utils.rs  websocket.rs
datalayer/: Cargo.toml
datalayer/src/: lib.rs  state.rs
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs  research.rs
executor/: Cargo.toml
executor/src/: binance_trader.rs  lib.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
monitoring/: prometheus.yml
store/: Cargo.toml
store/src/: entities.rs  lib.rs  migration.rs
strategy/: Cargo.toml
strategy/src/: calculation.rs  lib.rs  risk.rs
utils/: Cargo.toml
utils/src/: db.rs  lib.rs  prices.rs  sig.rs  time.rs  tokens.rs
