[workspace]
members = [
    "app",
    "common",
    "connector",
    "datalayer",
    "strategy",
    "executor",
    "store",
    "metrics",
    "engine",
    "utils",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1", features = [
    "macros",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-uuid",
] }
sea-orm-migration = { version = "1", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
console-subscriber = "0.2"
futures = "0.3"
