[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
engine = { path = "../engine" }
chrono.workspace = true
common = { path = "../common" }
connector = { path = "../connector" }
utils = { path = "../utils" }
store = { path = "../store" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
tokio.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing.workspace = true
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "order"
path = "src/order.rs"

[[bin]]
name = "account"
path = "src/account.rs"

[[bin]]
name = "fetch_fee"
path = "src/fetch_fee.rs"

[[bin]]
name = "fetch_margin"
path = "src/fetch_margin.rs"

[[bin]]
name = "fetch_price"
path = "src/fetch_price.rs"

[[bin]]
name = "fetch_token"
path = "src/fetch_token.rs"

[[bin]]
name = "sync_trades"
path = "src/sync_trades.rs"
[[bin]]
name = "select"
path = "src/select.rs"
