[package]
name = "connector"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
chrono.workspace = true
common = { path = "../common" }
futures-util = "0.3"
hmac = "0.12"
hex = "0.4"
rand.workspace = true
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
serde_urlencoded = "0.7"
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tracing.workspace = true
