[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common = { path = "../common" }
connector = { path = "../connector" }
datalayer = { path = "../datalayer" }
executor = { path = "../executor" }
metrics = { path = "../metrics" }
serde.workspace = true
serde_json.workspace = true
store = { path = "../store" }
strategy = { path = "../strategy" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utils = { path = "../utils" }
sea-orm.workspace = true
futures.workspace = true
