[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common = { path = "../common" }
datalayer = { path = "../datalayer" }
connector = { path = "../connector" }
store = { path = "../store" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
