[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
common = { path = "../common" }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
store = { path = "../store" }
tokio.workspace = true
